--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-dj-database-url==0.5.0
-dj-static==0.0.6
-Django==2.2
-django-bootstrap3==11.0.0
-gunicorn==19.9.0
-pytz==2019.1
-sqlparse==0.3.0
-static3==0.7.0
-psycopg2>=2.6.1
+dj-database-url >=0.5.0
+dj-static >=0.0.6
+Django >= 3.1.5
+django-bootstrap3 >= 14.2.0
+gunicorn >= 20.0.4
+pytz >=2020.5
+sqlparse >=0.4.1
+static3 >=0.7.0
+psycopg2 >=2.6.1
